Updated sign in with create account link

--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -37,12 +37,12 @@
 
 } 
 
-body{
+/* body{
 background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg);
 background-repeat: no-repeat;
 background-size: 100%; 
 background-position-y: -100%;
-}
+} */
 
 .search-submit {
   margin-left: 3%;
