--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -26,16 +26,28 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-
+ */
 
 .searchBar {
-  margin-left: auto;
-  margin-right: auto;
-	padding: 10px;
-  width: 75%;
+  /* margin-left: relative;
+  margin-right: auto; */
+  padding: 10px;
+  display: inline-block;
+  width: 50%;
   border-radius: 30px;
 
 } 
+
+.searchBar2 {
+  /* margin-left: relative;
+  margin-right: auto; */
+  padding: 10px;
+  display: inline-block;
+  width: 50%;
+  border-radius: 30px;
+
+} 
+
 
 /* body{
 background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg);
@@ -60,6 +72,7 @@ background-position-y: -100%;
 /*****************************
   NAV
 *****************************/
+/* 
 .rev-logo {
   width: auto;
   height: 2em;
@@ -90,57 +103,7 @@ nav {
   -webkit-box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
   -moz-box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
   box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
-}
-
-
-/*****************************
-  TIC TAC TOE
-*****************************/
-.tic-tac-col {
-  border: 1px solid black;
-  font-size: 4em;
-  text-align: center;
-  min-height: 1em ;
-}
-#tic-tac-board {
-  width: 75%;
-}
-
-
-
-/*****************************
-  SIGN IN
-*****************************/
-.form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
-}
-.form-signin .checkbox {
-  font-weight: 400;
-}
-.form-signin .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
+} */
 
 #error-message {
   color: red;
