--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -38,6 +38,12 @@
 
 } 
 
+.search-submit{
+  margin-left: 400px;
+  /* margin-right: auto; */
+display: inline-block;
+}
+
 .searchBar2 {
   /* margin-left: relative;
   margin-right: auto; */
@@ -48,13 +54,21 @@
 
 } 
 
+h3{
+  color: white;
+  cursor: pointer;
 
-/* body{
-background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg);
+}
+
+body{
+  /* position: absolute; */
+/* background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg); */
+background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg);
 background-repeat: no-repeat;
-background-size: 100%; 
-background-position-y: -100%;
-} */
+background-size: cover;
+/* padding-top: 400px; */
+/* background-position: auto; */
+}
 
 .search-submit {
   margin-left: 3%;
@@ -68,43 +82,3 @@ background-position-y: -100%;
   cursor: not-allowed;
 }
 
-
-/*****************************
-  NAV
-*****************************/
-/* 
-.rev-logo {
-  width: auto;
-  height: 2em;
-  margin-right: 2em;
-}
-
-.margin-nav {
-  margin-right: 2em
-}
-
-
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-  color: rgba(0,0,0,.7);
-}
-
-.navbar-expand-md .navbar-nav .nav-link {
-  padding-right: .75rem !important;
-  padding-left: .75rem !important;
-}
-
-.bg-light {
-  background-color: #ffffff !important;
-}
-
-nav {
-  border-bottom: 1px solid #ffffff !important;
-  margin-bottom: 20px;
-  -webkit-box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
-  -moz-box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
-  box-shadow: 1px -12px 28px -1px rgba(0, 0, 0, 0.87);
-} */
-
-#error-message {
-  color: red;
-}
