--- a/FrontEnd/src/components/messages/messagesSearch.css
+++ b/FrontEnd/src/components/messages/messagesSearch.css
@@ -55,25 +55,20 @@ display: inline-block;
 } 
 
 h3{
-  color: black;
+  color: white;
   cursor: pointer;
-}
-
-h4{
-  color: black;
-  /* cursor: pointer; */
 
 }
 
-/* body{
-  position: absolute; 
-  background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg); 
-  background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg);
-  background-repeat: no-repeat;
-  background-size: cover; 
-  padding-top: 400px; 
-  background-position: auto;
-} */
+body{
+  /* position: absolute; */
+/* background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg); */
+background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+/* padding-top: 400px; */
+/* background-position: auto; */
+}
 
 .search-submit {
   margin-left: 3%;
