--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -1,58 +1,52 @@
-/* .App {
-  text-align: center;
+
+ .allSearch{
+margin-left: 10%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
- */
-
-.searchBar {
-  /* margin-left: relative;
-  margin-right: auto; */
+ .searchBar {
   padding: 10px;
   display: inline-block;
-  width: 50%;
+  width: 40%;
   border-radius: 30px;
-
 } 
 
 .search-submit{
-  margin-left: 400px;
-  /* margin-right: auto; */
-display: inline-block;
+  margin-left: 20px;
+  margin-right: 20px;
+  display: inline-block;
 }
 
+/* form { 
+  position: fixed;
+} */
+
 .searchBar2 {
-  /* margin-left: relative;
-  margin-right: auto; */
   padding: 10px;
   display: inline-block;
-  width: 50%;
+  width: 40%;
   border-radius: 30px;
-
 } 
+
+.tagList {
+  float: left;
+  position: fixed;
+}
+
+.messageBoard {
+  float: unset;
+  margin-left: 30%;
+  border: '30px solid green';
+  border-radius: 4;
+  border-Width: 0.5;
+  border-Color: '#d6d7da';
+}
+
+
+.postBox {
+  border-color: black;
+  border: 5px;
+  border-radius: 3px;
+}
 
 h3{
   color: black;
@@ -65,18 +59,11 @@ h4{
 
 }
 
-/* body{
-  position: absolute; 
-  background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg); 
+body{
+  /* background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg);  */
   background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg);
   background-repeat: no-repeat;
   background-size: cover; 
-  padding-top: 400px; 
-  background-position: auto;
-} */
-
-.search-submit {
-  margin-left: 3%;
 }
 
 .pointer {
