--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -41,6 +41,15 @@ margin-left: 10%;
   border-Color: '#d6d7da';
 }
 
+.messageBox{
+  margin-left: 2%;
+  padding: 10px;
+  display: inline-block;
+  width: 87%;
+  border-radius: 30px;
+  /* width: 50%; */
+}
+
 
 .postBox {
   border-color: black;
