--- a/FrontEnd/src/components/newGroup/newGroupStyle.css
+++ b/FrontEnd/src/components/newGroup/newGroupStyle.css
@@ -2,7 +2,7 @@
 
 /* Full-width input fields */
   input[type=text], input[type=password] {
-  width: 100%;
+  width: 50%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
@@ -14,24 +14,17 @@
 margin: auto;
 }
 
-#social{
+#social-form{
+    /* margin: 0 auto; 
+    width:250px; */
+  /* text-align: center; */
   margin-top: -2%;
   margin-left: -1%;
   background: white;
-  /*object-fit: fill;
-  background-size: cover;
-  background-image: url(http://2.media.dorkly.cvcdn.com/18/14/443ec8405363b3a41bd2f29a10ae21c5.gif);
-  background-image: url(https://fat.gfycat.com/RemoteIncomparableAfricanparadiseflycatcher.gif); 
-  background-image: url(https://www.collegeatlas.org/wp-content/uploads/2014/06/Top-Party-Schools-main-image.jpg);
- */} 
+} 
 
-#socialDiv{
-  /* position: absolute; */
-  /* margin-top: -4%;
-  margin-left: -1%; */
-  /* object-fit: fill; */
+#social-div{
   height: 300px;
-  /* text-align: center; */
   margin: auto;
   background-position-y: 30%;
   background-repeat: no-repeat;
@@ -55,16 +48,22 @@ hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
+/* 
+label{
+text-align: left;
+margin-right: 75%;
+} */
 
 /* Set a style for all buttons */
 button {
+  border-radius: 10px;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 20%;
   opacity: 0.9;
 }
 
@@ -73,15 +72,16 @@ button:hover {
 }
 
 /* Extra styles for the cancel button */
-.cancelbtn {
+/* .cancelbtn {
   padding: 14px 20px;
   background-color: #f44336;
-}
+} */
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
+.newGroupButton {
   float: left;
-  width: 50%;
+  width: 20%;
+  border-radius: 10px;
 }
 
 /* Add padding to container elements */
@@ -102,3 +102,30 @@ button:hover {
     width: 100%;
   }
 }
+
+.reveal-if-active {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  font-size: 16px;
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  transition: 0.5s;
+}
+.reveal-if-active label {
+  display: block;
+  margin: 0 0 3px 0;
+}
+.reveal-if-active input[type="text"] {
+  width: 50%;
+}
+input[type="radio"]:checked ~ .reveal-if-active, input[type="checkbox"]:checked ~ .reveal-if-active {
+  opacity: 1;
+  max-height: 100px;
+  padding: 10px 20px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  overflow: visible;
+}
+
+  
