--- a/FrontEnd/src/components/register/register-style.css
+++ b/FrontEnd/src/components/register/register-style.css
@@ -1,5 +1,19 @@
 * {box-sizing: border-box}
 
+.form-register-body{
+/* background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://codetheweb.blog/assets/img/posts/full-image-hero/image.jpg'); */
+background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('http://www.technocrazed.com/wp-content/uploads/2015/12/New-York-Wallpaper-Background-12.jpg');    
+background-size: cover;
+background-position: center center;
+background-repeat: no-repeat;
+background-attachment: fixed;
+  /* margin: 0 auto; 
+  width:250px; */
+/* text-align: center; */
+margin-top: -2%;
+margin-left: -1%;
+}
+
 /* Full-width input fields */
   input[type=text], input[type=password] {
   width: 100%;
@@ -20,8 +34,17 @@ hr {
   margin-bottom: 25px;
 }
 
+#registeText {
+  color: white;
+}
+
+.registerFields{
+  border-radius: 10px;
+  width: 20%;
+}
+
 /* Set a style for all buttons */
-button {
+/* button {
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -30,7 +53,8 @@ button {
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
-}
+  border-radius: 10px;
+} */
 
 button:hover {
   opacity:1;
@@ -40,12 +64,13 @@ button:hover {
 .cancelbtn {
   padding: 14px 20px;
   background-color: #f44336;
+  margin-right: 10pt;
 }
 
 /* Float cancel and signup buttons and add an equal width */
 .cancelbtn, .signupbtn {
   float: left;
-  width: 50%;
+  width: 20%;
 }
 
 /* Add padding to container elements */
@@ -63,6 +88,6 @@ button:hover {
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
-    width: 100%;
+    width: 20%;
   }
 }
