--- a/FrontEnd/src/components/sign-in/signin-style.css
+++ b/FrontEnd/src/components/sign-in/signin-style.css
@@ -16,10 +16,10 @@
 
 }   */
 
-html,
+/* html,
 body {
   height: 100%;
-}
+} */
 
 h5 {
 text-align: center;
@@ -47,14 +47,14 @@ text-align: center;
     margin-bottom: 14%;
 }
 
-/* input[type=text], input[type=password] {
+input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
-} */
+}
 
 #signin-div{
   background: white;
