--- a/FrontEnd/src/components/sign-in/signin-style.css
+++ b/FrontEnd/src/components/sign-in/signin-style.css
@@ -58,7 +58,7 @@ input[type=text], input[type=password] {
 
 #signin-div{
   background: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://codetheweb.blog/assets/img/posts/full-image-hero/image.jpg');
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://codetheweb.blog/assets/img/posts/full-image-hero/image.jpg'); */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
