Removed universal background.  Gave groups component div background

--- a/FrontEnd/src/components/messages/messages.css
+++ b/FrontEnd/src/components/messages/messages.css
@@ -68,7 +68,7 @@ h4{
 
 }
 
-body{
+#groupBody{
   /* background-image: url(https://dtkp6g0samjql.cloudfront.net/uploads/photo/file/7834336/il_fullxfull.252642439.jpg);  */
   background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg);
   background-repeat: no-repeat;
