updated fixed, sticky navbar

--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -78,7 +78,7 @@ h4{
 }
 
 body{
-  background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg);
+  /* background-image: url(http://www.desktopwallpaperhd.net/wallpapers/5/e/skyline-desktop-wallpaper-night-photo-chicago-59774.jpg); */
   background-repeat: no-repeat;
   background-size: cover; 
 }
