--- a/FrontEnd/src/components/messages/messages.css
+++ b/FrontEnd/src/components/messages/messages.css
@@ -37,10 +37,10 @@ margin-left: 10%;
   border-radius: 30px;
 } 
 
-.tagList {
+/* .tagList {
   float: left;
   position: fixed;
-}
+} */
 
 .messageBoard {
   float: unset;
