--- a/FrontEnd/src/components/userDashboard/dashboard.css
+++ b/FrontEnd/src/components/userDashboard/dashboard.css
@@ -1,5 +1,5 @@
 
- .allSearch{
+ /* .allSearch{
 margin-left: 10%;
 }
 
@@ -14,24 +14,24 @@ margin-left: 10%;
   margin-left: 20px;
   margin-right: 20px;
   display: inline-block;
-}
+} */
 
 /* form { 
   position: fixed;
 } */
-
+/* 
 .searchBar2 {
   padding: 10px;
   display: inline-block;
   width: 40%;
   border-radius: 30px;
-} 
-
-/* .tagList {
-  float: left;
-  position: fixed;
 } */
 
+.tagList {
+  float: left;
+  /* position: fixed; */
+}
+/* 
 .messageBoard {
   float: unset;
   margin-left: 30%;
@@ -39,12 +39,12 @@ margin-left: 10%;
   border-radius: 4;
   border-Width: 0.5;
   border-Color: '#d6d7da';
-}
-
+} */
+/* 
 .join {
   float: unset;
   margin-left: 50%;
-  /* border: '30px solid green'; */
+  border: '30px solid green';
   border-radius: 4;
   border-Width: 0.5;
   border-Color: '#d6d7da';
@@ -56,7 +56,7 @@ margin-left: 10%;
   display: inline-block;
   width: 87%;
   border-radius: 30px;
-  /* width: 50%; */
+  width: 50%;
 }
 
 
@@ -69,11 +69,11 @@ margin-left: 10%;
 h3{
   color: black;
   cursor: pointer;
-}
-
+} */
+/* 
 h4{
   color: black;
-  /* cursor: pointer; */
+  cursor: pointer;
 
 }
 
@@ -99,14 +99,14 @@ body{
 
 .not-allowed-cursor {
   cursor: not-allowed;
-}
-
+} */
+/* 
 #test{
-  /* position: fixed; */
+  position: fixed;
   bottom: 2px;
   color: white;
   text-align: center;
-}
+} */
 
 /* #groupBody{
 position:fixed !important;
@@ -117,9 +117,8 @@ left: 0;
 right: 0;
 } */
 
-.form-groups-body{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://www.kimptonhotels.com/blog/wp-content/uploads/2015/06/seattle-skyline.jpg');
-  /* background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('http://melbournestreet.net/wp-content/uploads/2017/10/melbournestreet-18-970x647.jpg'); */
+#dashboard-body{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('http://melbournestreet.net/wp-content/uploads/2017/10/melbournestreet-18-970x647.jpg');
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://codetheweb.blog/assets/img/posts/full-image-hero/image.jpg'); */
   /* background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('http://www.technocrazed.com/wp-content/uploads/2015/12/New-York-Wallpaper-Background-12.jpg');     */
   background-size: cover;
