--- a/FrontEnd/src/components/nav.css
+++ b/FrontEnd/src/components/nav.css
@@ -1,5 +1,6 @@
 #offset {
     height: 100px !important;
+    border: none;
 }
 
 #navContainer {
@@ -7,7 +8,7 @@
     display: inline-block;
     top: 0;
     width: 100%;
-    /* z-index: 0; */
+    z-index: 1000;
 }
 
 .navbar-toggler {
