--- a/FrontEnd/src/components/groups/groupsSearch.css
+++ b/FrontEnd/src/components/groups/groupsSearch.css
@@ -87,10 +87,12 @@ body{
   color: rgb(223, 0, 0);
   padding: 5pt;
   background-color: rgba(255, 255, 255, 0.712);
-  width: 40%;
+  width: 35%;
   border-radius: 10px;
-  margin: auto;
-  margin-top: 20%;
+  margin-right: auto;
+  margin-left: 27%; 
+  margin-top: 10%;
+  text-align: center;
 }
 
 .pointer {
@@ -131,6 +133,14 @@ right: 0;
   min-height: 1000px;
   padding: 0;
 /* margin: 0; */
+}
+
+#logoPandaThumb {
+  margin-top: 3%;
+  margin-right: auto;
+  margin-left: 5%;
+  border-radius: 90%;
+
 }
 
 
