--- a/FrontEnd/src/components/messages/messages.css
+++ b/FrontEnd/src/components/messages/messages.css
@@ -13,6 +13,15 @@ margin-left: 10%;
   margin-top: 25%;
 }
 
+#leaveGroupBtn{
+  float: left;
+  margin-top: 0;
+  margin-left: 2%;
+  padding: 10px;
+  width: 10%;
+  background-color: red;
+}
+
  .searchBar {
   padding: 10px;
   display: inline-block;
@@ -24,6 +33,7 @@ margin-left: 10%;
   margin-left: 20px;
   margin-right: 20px;
   display: inline-block;
+  margin: auto;
 }
 
 /* form { 
@@ -52,10 +62,12 @@ margin-left: 10%;
 }
 
 .messageBox{
-  margin-left: 2%;
+  margin-right: 1%;
+  margin-left: -15%;
+  margin-top: 2%;
   padding: 10px;
-  display: inline-block;
-  width: 87%;
+  /* display: inline-block; */
+  width: 86%;
   border-radius: 30px;
   /* width: 50%; */
 }
@@ -75,6 +87,17 @@ h3{
 h4{
   color: black;
   /* cursor: pointer; */
+}
+
+#groupTitle{
+  text-align: center;
+  color: white;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.623);
+  width: 25%;
+  border-radius: 10px;
+  margin: auto;
+  margin-bottom: 3%;
 }
 
 #messageBody{
