--- a/FrontEnd/src/components/messages/messages.css
+++ b/FrontEnd/src/components/messages/messages.css
@@ -9,8 +9,8 @@ margin-left: 10%;
   background-color: rgba(255, 255, 255, 0.712);
   width: 43%;
   border-radius: 10px;
-  margin: auto;
-  margin-top: 25%;
+  margin-left: 7%;
+  margin-top: 15%;
 }
 
 #leaveGroupBtn{
